# vulkan3dStudio

./: CMakeLists.txt  LICENSE  README.md
ExternalLibrrarys/glad/include/glad/: glad.h
ExternalLibrrarys/glad/src/: glad.c
ExternalLibrrarys/imgui/: imconfig.h
Sandbox/: Sandbox.cpp
Studio/: CMakeLists.txt
Studio/src/: Studio.h
Studio/src/Studio/: Application.cpp  Application.h  Camera.cpp  Camera.h  Core.h  GlfwCallbackManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  Vertex.h
src/: Material.cpp  Material.h  Shader.cpp  Shader.h
